tests/ui/fail/simple.rs
//@error-in-other-file: verification error
fn main() {
    let a: i64 = 1;
    assert!(a == 2);
}
